--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "@vanilla-extract/css": "^1.13.0",
     "next": "14.0.1",
     "react": "^18",
-    "react-camera-pro": "^1.3.0",
-    "react-dom": "^18",
-    "react-webcam": "^7.2.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
