--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.12.0",
     "@vanilla-extract/css": "^1.13.0",
-    "next": "14.0.1",
+    "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18"
   },
