--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vanilla-extract/next-plugin": "^2.3.1",
+    "encoding": "^0.1.13",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "typescript": "^5"
